- fixed wrong align off anchor content

--- a/css/selectmenu.css
+++ b/css/selectmenu.css
@@ -15,6 +15,8 @@
 .absol-selectmenu-anchor-content-container {
     position: absolute;
     z-index: 1002;
+    top: 0;
+    left: 0;
 }
 
 .absol-selectmenu-anchor-content-container .absol-bscroller {
